Changed font size, added blockquote, Changed opacity and fixed color contrast issues

--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ a:hover {
     background-size: 280px 280px;
 }
 
+.position-r{
+    position: relative;
+}
+
 .b-parallax {
     background-attachment: fixed;
 }
@@ -284,7 +288,8 @@ a:hover {
 }
 
 #bloc-2-services p {
-    font-size: 11px;
+    font-size: 14px;
+    line-height: 24px;
 }
 
 .navbar {
@@ -360,6 +365,10 @@ a:hover {
     float: right;
     position: relative;
     z-index: 2;
+}
+
+.link-color {
+    color: #e6e6e6 !important;
 }
 
 @media (min-width: 768px) {
@@ -516,7 +525,7 @@ button {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    opacity: 0;
+    opacity: 1;
     z-index: 500;
     transition: all .3s ease-in-out;
 }
@@ -677,7 +686,7 @@ a {
 }
 
 p {
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -704,7 +713,7 @@ p {
     margin: auto auto auto auto;
 }
 
-h2 {
+h2, .t-size {
     font-size: 22px;
     line-height: 1.4em;
 }
@@ -715,6 +724,20 @@ h3 {
     font-weight: 700;
     color: #333333!important;
 }
+
+
+blockquote {
+    color: #333!important;
+    font-size: 15px;
+    line-height: 26px;
+    width: 85%;
+    margin: 0 auto;
+    display: block;
+    max-width: 565px;
+    border-left: none;
+    padding: 10px 20px;
+}
+
 
 .med-width-whitespace {
     max-width: 800px;
@@ -740,7 +763,7 @@ h4 {
 }
 
 .portfolio-thumb {
-    margin-bottom: 24px;
+    margin: 24px auto;
 }
 
 .portfolio-row {
@@ -777,20 +800,20 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #8F340A;
 }
 
 .tc-white {
-    color: #364577!important;
+    color: #D8DCEE!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #8F340A;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #BA440D!important;
     color: #FFFFFF!important;
 }
 
@@ -803,11 +826,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #8D3107!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #6B2606!important;
 }
 
 .icon-dark-slate-blue {
@@ -829,6 +852,10 @@ h4 {
 
 .bg-atlanta-20made-20sign-20orange {
     background-image: url("img/atlanta%20made%20sign%20orange.jpg");
+}
+
+.link-h:hover{
+    text-decoration: underline!important;
 }
 
 @media (max-width: 1024px) {
@@ -854,13 +881,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -870,30 +897,19 @@ h4 {
     .container {
         width: 100%;
     }
-    .b-parallax {
-        background-attachment: scroll;
-    }
+    
     .page-container,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+    
     .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-}
+} 
 
 @media (max-width: 767px) {
     .page-container {
@@ -1031,6 +1047,12 @@ h4 {
     .blocsapp-device-iphone5 img {
         width: 180px;
         height: 320px;
+    }
+    .social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
     }
 }
 
